// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OpenshiftView Component should have a fallback title: title 1`] = `
<PageLayout>
  <PageHeader>
    Subscription Watch
  </PageHeader>
  <PageSection>
    <Connect(GraphCard)
      cardTitle="t(curiosity-graph.coresHeading)"
      filterGraphData={
        Array [
          Object {
            "fill": "#8bc1f7",
            "id": "cores",
            "stroke": "#06c",
          },
          Object {
            "id": "threshold",
          },
        ]
      }
      key="lorem ipsum"
      productId="lorem ipsum"
    />
  </PageSection>
</PageLayout>
`;

exports[`OpenshiftView Component should render a non-connected component: non-connected 1`] = `
<PageLayout>
  <PageHeader>
    Dolor sit
  </PageHeader>
  <PageSection>
    <Connect(GraphCard)
      cardTitle="t(curiosity-graph.coresHeading)"
      filterGraphData={
        Array [
          Object {
            "fill": "#8bc1f7",
            "id": "cores",
            "stroke": "#06c",
          },
          Object {
            "id": "threshold",
          },
        ]
      }
      key="lorem ipsum"
      productId="lorem ipsum"
    />
  </PageSection>
</PageLayout>
`;
